--- a/index.html
+++ b/index.html
@@ -18,31 +18,47 @@
         </header>
 
         <p>
-          The PROIEL Treebank is a dependency treebank with morphosyntactic and
-          information-structure annotation. It originally consisted of parallel
-          versions of the New Testament in Ancient Greek and its translations
-          into Latin, Old Church Slavonic, Gothic and Armenian, but has since
-          expanded to include ancient Indo-European texts in general.
+
+          The <em>PROIEL Treebank</em> is a dependency treebank with
+          morphosyntactic and information-structure annotation.  It includes
+          texts in several ancient Indo-European languages and is freely
+          available under the <a
+          href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">CC
+          BY-NC-SA 3.0</a> license.
+
         </p>
 
         <p>
-          The annotation scheme for described in the
-          <a href="http://folk.uio.no/daghaug/syntactic_guidelines.pdf">PROIEL
-            Guidelines for Annotation</a>.
+
+          The <em>PROIEL Treebank</em> was originally developed as part of the
+          research project <a
+          href="www.hf.uio.no/ifikk/english/research/projects/proiel/">Pragmatic
+          Resources in Old Indo-European Languages</a>, which was financed by the
+          Norwegian Research Council, and included the New Testament in Ancient
+          Greek and its translations into Latin, Old Church Slavonic, Gothic and
+          Armenian.  The <em>PROIEL treebank</em> has since expanded to include
+          ancient Indo-European texts in general, and the treebank is still in active
+          development.
+
         </p>
 
-        <p>Please cite as
+        <p>
+
+          The morphosyntactic annotation scheme is described in the document
+          <a href="http://folk.uio.no/daghaug/syntactic_guidelines.pdf">PROIEL
+            Guidelines for Annotation</a>. If you use the treebank, please cite it as
           <div class="citation">
 Haug, Dag Trygve Truslew and Marius Jøhndal. 2008.
 'Creating a Parallel Treebank of the Old Indo-European Bible Translations'. In
 Khalid Choukri (ed.). <em>Proceedings of the Second Workshop on
 Language Technology for Cultural Heritage Data (LaTeCH 2008)</em>.
-
           </div>
         </p>
 
         <p>
+
           The following texts are currently available:
+
         </p>
 
         <table>
@@ -56,9 +72,12 @@ Language Technology for Cultural Heritage Data (LaTeCH 2008)</em>.
             <td><a href="https://raw.githubusercontent.com/proiel/proiel-treebank/master/greek-nt.xml">The Greek New Testament (Tischendorf 1869)</a></td>
             <td>Ancient Greek</td>
             <td><a href="https://github.com/proiel/proiel-treebank/blame/master/greek-nt.xml">17 April 2014</a></td>
-            <td><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">CC BY-NC-SA 3.0</a></td>
           </tr>
         </table>
+
+        <p>
+
+        </p>
 
       </div>
     </div>
