Fixed broken link.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           The <em>PROIEL Treebank</em> was originally developed as part of the
           research project <a
-          href="www.hf.uio.no/ifikk/english/research/projects/proiel/">Pragmatic
+          href="http://www.hf.uio.no/ifikk/english/research/projects/proiel/">Pragmatic
           Resources in Old Indo-European Languages</a>, which was financed by the
           Norwegian Research Council, and included the New Testament in Ancient
           Greek and its translations into Latin, Old Church Slavonic, Gothic and
