License language fix.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
           The <em>PROIEL Treebank</em> is a dependency treebank with
           morphosyntactic and information-structure annotation.  It includes
           texts in several ancient Indo-European languages and is freely
-          available under the <a
-          href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">CC
-          BY-NC-SA 3.0</a> license.
+          available under a <a
+          href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">
+          Creative Commons Attribution-NonCommercial-ShareAlike 3.0
+          License </a>.
 
         </p>
 
