Text and style cleanup.

--- a/index.html
+++ b/index.html
@@ -26,68 +26,75 @@
         </header>
 
         <p>
-
           The <em>PROIEL Treebank</em> is a dependency treebank with
-          morphosyntactic and information-structure annotation.  It includes
+          morphosyntactic and information-structure annotation. It includes
           texts in several ancient Indo-European languages and is freely
           available under a <a
           href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">
           Creative Commons Attribution-NonCommercial-ShareAlike 3.0
-          License </a>.
-
+          License</a>.
         </p>
 
         <p>
-
-          The <em>PROIEL Treebank</em> was originally developed as part of the
-          research project <a
+          The treebank was started as part of the research
+          project <a
           href="http://www.hf.uio.no/ifikk/english/research/projects/proiel/">Pragmatic
           Resources in Old Indo-European Languages</a>, which was financed by the
-          Norwegian Research Council, and included the New Testament in Ancient
-          Greek and its translations into Latin, Old Church Slavonic, Gothic and
-          Armenian.  The <em>PROIEL treebank</em> has since expanded to include
-          ancient Indo-European texts in general, and the treebank is still in active
+          Norwegian Research Council. It originally comprised the New Testament in
+          Ancient Greek and its translations into Latin, Old Church Slavonic,
+          Gothic and Armenian. The treebank has since been expanded to
+          include ancient Indo-European texts in general, and it is still in active
           development.
-
         </p>
 
         <p>
+          On this site you will find our official, versioned releases of the treebank.
+          The following texts are currently included:
 
-          The morphosyntactic annotation scheme is described in the document
-          <a href="http://folk.uio.no/daghaug/syntactic_guidelines.pdf">PROIEL
-            Guidelines for Annotation</a>. If you use the treebank, please cite it as
+          <table>
+            <tr>
+              <th>Text</th>
+              <th>Language</th>
+            </tr>
+            <tr>
+              <td>The Greek New Testament (ed. Tischendorf 1869)</td>
+              <td>Ancient Greek</td>
+            </tr>
+          </table>
+        </p>
+
+        <p style="text-align: center">
+          <a class="button gray" href="https://github.com/proiel/proiel-treebank/archive/proiel-treebank-20140417.zip"><i class="icon-download-alt"></i> Download current version</a>
+        </p>
+
+        <p>
+          If you use the treebank, please cite as:
+
           <div class="citation">
 Haug, Dag Trygve Truslew and Marius Jøhndal. 2008.
 'Creating a Parallel Treebank of the Old Indo-European Bible Translations'. In
 Khalid Choukri (ed.). <em>Proceedings of the Second Workshop on
 Language Technology for Cultural Heritage Data (LaTeCH 2008)</em>.
           </div>
+
         </p>
 
         <p>
-
-          The following texts are currently available:
-
+          Please see the individual data files in the release distribution for
+          complete contributor details.
         </p>
-
-        <table>
-          <tr>
-            <th><!-- i class="icon-download-alt"></i -->Text</th>
-            <th>Language</th>
-            <th><!-- i class="icon-info-sign"></i -->Version</th>
-            <th><!-- i class="icon-download-alt"></i -->License</th>
-          </tr>
-          <tr>
-            <td><a href="https://raw.githubusercontent.com/proiel/proiel-treebank/master/greek-nt.xml">The Greek New Testament (Tischendorf 1869)</a></td>
-            <td>Ancient Greek</td>
-            <td><a href="https://github.com/proiel/proiel-treebank/blame/master/greek-nt.xml">17 April 2014</a></td>
-          </tr>
-        </table>
 
         <p>
-
+          Releases are hosted on Github, where you can access <a
+            href="">previous releases</a> and <a href="">browse changes between
+          releases</a>.
         </p>
 
+        <p>
+          The morphosyntactic annotation scheme is described in the document
+          <a href="http://folk.uio.no/daghaug/syntactic_guidelines.pdf">PROIEL
+            Guidelines for Annotation</a>.
+        </p>
       </div>
     </div>
 
