Added more texts.

--- a/index.html
+++ b/index.html
@@ -55,12 +55,39 @@
             <tr>
               <th>Text</th>
               <th>Language</th>
+              <th>Text ID</th>
             </tr>
             <tr>
               <td>The Greek New Testament (ed. Tischendorf 1869)</td>
               <td>Ancient Greek</td>
+              <td><tt>greek-nt</tt></td>
+            </tr>
+            <tr>
+              <td>The Armenian New Testament (ed. Künzle 1984)</td>
+              <td>Ancient Greek</td>
+              <td><tt>armenian-nt</tt></td>
+            </tr>
+            <tr>
+              <td>The Gothic Bible (ed. Streitberg 1919)</td>
+              <td>Gothic</td>
+              <td><tt>gothic-nt</tt></td>
+            </tr>
+            <tr>
+              <td>Codex Marianus (ed. Jagić 1883)</td>
+              <td>Old Church Slavonic</td>
+              <td><tt>marianus</tt></td>
+            </tr>
+            <tr>
+              <td>Jerome's Vulgate</td>
+              <td>Latin</td>
+              <td><tt>latin-nt</tt></td>
             </tr>
           </table>
+        </p>
+
+        <p>
+          Please see the data files in the release distribution for
+          complete contributor details and editorial notes.
         </p>
 
         <p style="text-align: center">
@@ -77,11 +104,6 @@ Khalid Choukri (ed.). <em>Proceedings of the Second Workshop on
 Language Technology for Cultural Heritage Data (LaTeCH 2008)</em>.
           </div>
 
-        </p>
-
-        <p>
-          Please see the individual data files in the release distribution for
-          complete contributor details.
         </p>
 
         <p>
