--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </tr>
             <tr>
               <td>The Armenian New Testament (ed. Künzle 1984)</td>
-              <td>Ancient Greek</td>
+              <td>Classical Armenian</td>
               <td><tt>armenian-nt</tt></td>
             </tr>
             <tr>
