--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </p>
 
         <p style="text-align: center">
-          <a class="button gray" href="https://github.com/proiel/proiel-treebank/archive/proiel-treebank-20140417.zip"><i class="icon-download-alt"></i> Download current version</a>
+          <a class="button gray" href="https://github.com/proiel/proiel-treebank/archive/proiel-treebank-20140423.zip"><i class="icon-download-alt"></i> Download current version</a>
         </p>
 
         <p>
@@ -108,8 +108,7 @@ Language Technology for Cultural Heritage Data (LaTeCH 2008)</em>.
 
         <p>
           Releases are hosted on Github, where you can access <a
-            href="">previous releases</a> and <a href="">browse changes between
-          releases</a>.
+            href="https://github.com/proiel/proiel-treebank/releases">previous releases</a>.
         </p>
 
         <p>
