Added word counts, link to github project page and keywords.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="" />
+    <meta name="keywords" content="PROIEL corpus treebank Latin Greek download" />
     <link rel="stylesheet" type="text/css" href="css/kickstart.css" media="all" />
     <link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
     <link rel="stylesheet" type="text/css" href="css/colors.css">
@@ -26,7 +27,7 @@
         </header>
 
         <p>
-          The <em>PROIEL Treebank</em> is a dependency treebank with
+          The PROIEL Treebank is a dependency treebank with
           morphosyntactic and information-structure annotation. It includes
           texts in several ancient Indo-European languages and is freely
           available under a <a
@@ -56,31 +57,37 @@
               <th>Text</th>
               <th>Language</th>
               <th>Text ID</th>
+              <th>Size</th>
             </tr>
             <tr>
               <td>The Greek New Testament (ed. Tischendorf 1869)</td>
               <td>Ancient Greek</td>
               <td><tt>greek-nt</tt></td>
+              <td>130148 words</td>
             </tr>
             <tr>
               <td>The Armenian New Testament (ed. Künzle 1984)</td>
               <td>Classical Armenian</td>
               <td><tt>armenian-nt</tt></td>
+              <td>23454 words</td>
             </tr>
             <tr>
               <td>The Gothic Bible (ed. Streitberg 1919)</td>
               <td>Gothic</td>
               <td><tt>gothic-nt</tt></td>
+              <td>57210 words</td>
             </tr>
             <tr>
               <td>Codex Marianus (ed. Jagić 1883)</td>
               <td>Old Church Slavonic</td>
               <td><tt>marianus</tt></td>
+              <td>58269 words</td>
             </tr>
             <tr>
               <td>Jerome's Vulgate</td>
               <td>Latin</td>
               <td><tt>latin-nt</tt></td>
+              <td>80269 words</td>
             </tr>
           </table>
         </p>
@@ -107,9 +114,12 @@ Language Technology for Cultural Heritage Data (LaTeCH 2008)</em>.
         </p>
 
         <p>
-          Releases are hosted on Github, where you can access <a
-            href="https://github.com/proiel/proiel-treebank/releases">previous releases</a>.
-        </p>
+          Releases are hosted on <a
+          href="https://github.com/proiel/proiel-treebank/">Github</a>, where
+          you can also access <a
+          href="https://github.com/proiel/proiel-treebank/releases">previous
+          releases</a>.
+       </p>
 
         <p>
           The morphosyntactic annotation scheme is described in the document
