Switched to Jekyll.

--- a/index.html
+++ b/index.html
@@ -1,30 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>The PROIEL Treebank of Indo-European Languages</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content="" />
-    <meta name="keywords" content="PROIEL corpus treebank Latin Greek download" />
-    <link rel="stylesheet" type="text/css" href="css/kickstart.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
-    <link rel="stylesheet" type="text/css" href="css/colors.css">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-41787940-5', 'proiel.github.io');
-      ga('send', 'pageview');
-    </script>
-  </head>
-  <body>
-    <div class="grid">
-      <div class="col_12" style="margin-top:100px;">
-        <header>
-          <h1 class="maroon">The PROIEL Treebank</h1>
-        </header>
+---
+layout: default
+---
 
         <p>
           The PROIEL Treebank is a dependency treebank with
@@ -114,10 +90,3 @@ Language Technology for Cultural Heritage Data (LaTeCH 2008)</em>.
           <a href="http://folk.uio.no/daghaug/syntactic_guidelines.pdf">PROIEL
             Guidelines for Annotation</a>.
         </p>
-      </div>
-    </div>
-
-    <div id="footer">
-    </div>
-  </body>
-</html>
