Updated download link to the latest flagged release.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ layout: default
         </p>
 
         <p style="text-align: center">
-          <a class="button gray" href="https://github.com/proiel/proiel-treebank/archive/20140604.zip"><i class="icon-download-alt"></i> Download current version</a>
+          <a class="button gray" href="https://github.com/proiel/proiel-treebank/releases/latest"><i class="icon-download-alt"></i> Download current version</a>
         </p>
 
         <p>
