--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: default
 Haug, Dag Trygve Truslew and Marius Jøhndal. 2008.
 'Creating a Parallel Treebank of the Old Indo-European Bible Translations'. In
 Khalid Choukri (ed.). <em>Proceedings of the Second Workshop on
-Language Technology for Cultural Heritage Data (LaTeCH 2008)</em>.
+Language Technology for Cultural Heritage Data (LaTeCH 2008)</em>. DOI 10.5281/zenodo.11957.
           </div>
 
         </p>
