Added new texts from release 20141219.

--- a/index.html
+++ b/index.html
@@ -34,24 +34,40 @@ layout: default
               <th>Language</th>
             </tr>
             <tr>
-              <td>The Greek New Testament (ed. Tischendorf 1869)</td>
+              <td>The Greek New Testament</td>
               <td>Ancient Greek</td>
             </tr>
             <tr>
-              <td>The Armenian New Testament (ed. Künzle 1984)</td>
-              <td>Classical Armenian</td>
+              <td>Herodotus, <i>Histories</i></td>
+              <td>Ancient Greek</td>
             </tr>
             <tr>
-              <td>The Gothic Bible (ed. Streitberg 1919)</td>
-              <td>Gothic</td>
-            </tr>
-            <tr>
-              <td>Codex Marianus (ed. Jagić 1883)</td>
-              <td>Old Church Slavonic</td>
+              <td>Sphrantzes, <i>Chronicles</i></td>
+              <td>Ancient Greek</td>
             </tr>
             <tr>
               <td>Jerome's Vulgate</td>
               <td>Latin</td>
+            </tr>
+            <tr>
+              <td>Caesar, <i>The Gallic War</i></td>
+              <td>Latin</td>
+            </tr>
+            <tr>
+              <td>Cicero, <i>Letters to Atticus</i></td>
+              <td>Latin</td>
+            </tr>
+            <tr>
+              <td>The Armenian New Testament</td>
+              <td>Classical Armenian</td>
+            </tr>
+            <tr>
+              <td>The Gothic Bible</td>
+              <td>Gothic</td>
+            </tr>
+            <tr>
+              <td>Codex Marianus</td>
+              <td>Old Church Slavonic</td>
             </tr>
           </table>
         </p>
