Added list of upcoming texts.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,33 @@ layout: default
           complete contributor details and editorial notes.
         </p>
 
+        <p>
+          We are constantly expanding the treebank. The following texts will be included in upcoming releases:
+
+          <table>
+            <tr>
+              <th>Text</th>
+              <th>Language</th>
+            </tr>
+            <tr>
+              <td><i>Peregrinatio Aetheriae</i></td>
+              <td>Latin</td>
+            </tr>
+            <tr>
+              <td>Cicero, <i>De officiis</i></td>
+              <td>Latin</td>
+            </tr>
+            <tr>
+              <td>Palladius, <i>Opus agriculturae</i></td>
+              <td>Latin</td>
+            </tr>
+            <tr>
+              <td>Plautus</td>
+              <td>Latin</td>
+            </tr>
+          </table>
+        </p>
+
         <p style="text-align: center">
           <a class="button gray" href="https://github.com/proiel/proiel-treebank/releases/latest"><i class="icon-download-alt"></i> Download current version</a>
         </p>
