Further work at making references usable.

--- a/index.html
+++ b/index.html
@@ -112,11 +112,16 @@ layout: default
           If you use the treebank, please cite as:
 
           <div class="citation">
-Haug, Dag Trygve Truslew and Marius Jøhndal. 2008.
-'Creating a Parallel Treebank of the Old Indo-European Bible Translations'. In
-Caroline Sporleder and Kiril Ribarov (eds.). <em>Proceedings of the Second Workshop on Language Technology for Cultural Heritage Data (LaTeCH 2008) (2008)</em>, pp. 27-34.
+            Dag T. T. Haug and Marius L. Jøhndal. 2008. '<a href="http://www.hf.uio.no/ifikk/english/research/projects/proiel/Activities/proiel/publications/marrakech.pdf">Creating a Parallel Treebank of the Old Indo-European Bible Translations</a>'. In Caroline Sporleder and Kiril Ribarov (eds.).  <em>Proceedings of the Second Workshop on Language Technology for Cultural Heritage Data (LaTeCH 2008) (2008)</em>, pp. 27-34.
           </div>
+        </p>
 
+        <p>
+          See also the following article for further details:
+
+          <div class="citation">
+            Dag T. T. Haug, Marius L. Jøhndal, Hanne M. Eckhoff, Mari Johanne Hertzenberg, and Angelika Müth. 2009. '<a href="http://www.atala.org/IMG/pdf/TAL-2009-50-2-01-Haug.pdf">Computational and Linguistic Issues in Designing a Syntactically Annotated Parallel Corpus of Indo-European Languages</a>'.  <em>Traitement automatique des langues</em> 50 (2): 17-45.
+          </div>
         </p>
 
         <p>
