Added ter to the upcoming list.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@ layout: default
               <td>Latin</td>
             </tr>
             <tr>
-              <td>Plautus</td>
+              <td>Plautus, opera omnia</td>
+              <td>Latin</td>
+            </tr>
+            <tr>
+              <td>Terence, opera omnia</td>
               <td>Latin</td>
             </tr>
           </table>
