Reworded the treebank expansion paragraph.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@ layout: default
         </p>
 
         <p>
-          We are constantly expanding the treebank. The following texts will be included in upcoming releases:
+          We are constantly expanding the treebank. The following texts are in
+          the pipeline and will be included in an upcoming release:
 
           <table>
             <tr>
