Add footer with license and github button

--- a/index.html
+++ b/index.html
@@ -146,3 +146,20 @@ layout: default
           <a href="http://folk.uio.no/daghaug/syntactic_guidelines.pdf">PROIEL
             Guidelines for Annotation</a>.
         </p>
+
+        <hr>
+
+        <footer class="footer">
+          <div class="container">
+            <div class="center">
+              <p>
+                This website is maintained by <a href="http://johndal.com/">Marius L Jøhndal</a>. The content of this website is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
+
+              </p>
+
+              <div id="social">
+                <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=proiel&repo=proiel-treebank&type=star&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
+              </div>
+            </div>
+          </div>
+        </footer>
