Redirect to base of dev.syntacticus.org

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>This contents has been permanently moved to http://dev.syntacticus.org/proiel/</title>
-<meta http-equiv="refresh" content="0; URL=http://dev.syntacticus.org/proiel/">
-<link rel="canonical" href="http://dev.syntacticus.org/proiel/">
+<title>This contents has been permanently moved to http://dev.syntacticus.org/</title>
+<meta http-equiv="refresh" content="0; URL=http://dev.syntacticus.org/">
+<link rel="canonical" href="http://dev.syntacticus.org/">
 
